feat: add navigation

--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
     <title>Jelizaveta Aia</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#anchor1">Contacts</a></li>
+                <li><a href="#anchor2">About myself</a></li>
+                <li><a href="#anchor3">Skills</a></li>
+                <li><a href="#anchor4">Code example</a></li>
+                <li><a href="#anchor5">Education</a></li>
+                <li><a href="#anchor6">Languages</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
