feat: update navigation

--- a/index.html
+++ b/index.html
@@ -13,16 +13,24 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#anchor1">Contacts</a></li>
-                <li><a href="#anchor2">About myself</a></li>
-                <li><a href="#anchor3">Skills</a></li>
-                <li><a href="#anchor4">Code example</a></li>
-                <li><a href="#anchor5">Education</a></li>
-                <li><a href="#anchor6">Languages</a></li>
+        <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+              <li class="nav-item"><a href="#myself" class="nav-link">About myself</a></li>
+              <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#code-example" class="nav-link">Code example</a></li>
+              <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+              <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
             </ul>
-        </nav>
+          </nav>
     </header>
+    <main>
+        <h1>Jelizaveta Aia</h1>
+        <h2>Front-end Developer(beginner)</h2>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
