refactor: transfer files

--- a/index.html
+++ b/index.html
@@ -24,10 +24,22 @@
             </ul>
           </nav>
     </header>
-    <main>
+    <section class="section-title">
+        <div>
         <h1>Jelizaveta Aia</h1>
         <h2>Front-end Developer(beginner)</h2>
+        </div>
+        <img src="photo.jpg" alt="My photo">
+        </section>
+    <main class="main-container">
 
+        <section class="section-contacts" id="contacts">
+            <h2>Contacts: </h2>
+            <p><span>Phone: </span>+372 56 215 857</p>
+            <p><span>E-mail: </span>jelizaveta05@gmail.com</p>
+            <p><span>GitHub: </span>@veta05</p>
+            <p><span>Discord: </span>Evetta#3496</p>
+        </section>
     </main>
     <footer>
 
