--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jelizaveta Aia</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="assetse/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
         <h1>Jelizaveta Aia</h1>
         <h2>Front-end Developer(beginner)</h2>
         </div>
-        <img src="photo.jpg" alt="My photo">
+        <img src="assets/photo.jpg" alt="My photo">
         </section>
     <main class="main-container">
 
@@ -39,6 +39,96 @@
             <p><span>E-mail: </span>jelizaveta05@gmail.com</p>
             <p><span>GitHub: </span>@veta05</p>
             <p><span>Discord: </span>Evetta#3496</p>
+        </section>
+
+        <section class="section-myself" id="myself">
+            <h2>About myself: </h2>
+            <p>
+                I'm studying at a technical school to become a junior software developer. 
+                There I realized that I wanted to choose the direction of the front-end. 
+                At the moment I devote time to this and I want to develop in this direction.
+                I love to learn, I love teamwork and I'm stress tolerant.
+            </p>
+        </section>
+
+        <section class="section-skills" id="skills">
+            <h2>Skills: </h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>PHP</li>
+                <li>C#</li>
+                <li>MySql</li>
+                <li>Access</li> 
+            </ul>
+        </section>
+        <section class="section-code" id="code-example">
+            <h2>Code example: </h2>
+            <pre>
+                id=""
+                while len(id)!=11 or ik.isdigit()!=True:
+                    try:
+                        id=input("Enter your id: ")
+                    except ValueError:
+                        print("Error!")
+                print("id analys: ".center(50,"-"))
+                print("First symbol: ")
+                id_list=list(id)
+                    if int(id_list[0]) not in [1,2,3,4,5,6]:
+                        print(ik_list[0], " - wrong number")
+                    else:
+                        print(id_list[0], " - correct number!")
+                        month=id_list[3]+id_list[4]
+                        month=int(month)
+                        if month>0 and month<13:
+                            print(id_list[3], id_list[4], "Correct data!")
+                            day=int(id_list[5]+id_list[6])
+                            #1,3,5,7,8,10,12 - 31 days
+                            #2,4,6,9,11 - 28-29, 30 days
+                            #1,2-"18", 3,4-"19", 5,6-"20" + id_list[1]+id_list[2]
+                            if int(id_list[0])==1 or int(id_list[0])==2:
+                                year=int("18" + id_list[1]+id_list[2])
+                            elif int(id_list[0])==3 or int(id_list[0])==4:
+                                year=int("19" + id_list[1]+id_list[2])
+                            elif int(id_list[0])==5 or int(id_list[0])==6:
+                                year=int("19" + id_list[1]+id_list[2])
+                            if month in[1,3,5,7,8,10,10] and day>0 and day<32:
+                                print(id_list[5], id_list[6], "correct day!")
+                            elif (month in [2,4,6,9,11] and day>0 and day<31) or (month==2 and day>0 and day<29):
+                                print(id_list[5], id_list[6], "correct day!")
+                            elif tear% 4==0 and month ==2 and day >0 and day<30:
+                                print(id_list[5], id_list[6], "correct day! 29 february.")
+                            else:
+                                print(id_list[3], id_list[4], "Wrong days")
+                        else:
+                            print(id_list[3],id_list[4], "wrong datas")
+                    sum=0
+                    for i in range(1,11):
+                        if i<10:
+                            sum+=i*int(id_list[i-1])
+                        else:
+                            sum+=(i-9)*int(id_list[i-1])
+                            sum+=i*int(id_list[i-1])
+                    print("Summ: ", sum)
+                    remainder=sum//11
+                    print(remainder)
+                    if remainder==10:
+                        sum=0
+                        for i in range(3,13):
+                            if i<=9:
+                                sum+=i*int(id_list[i-1])
+                            else:
+                                sum+=(i-9)*int(id_list[i-1])
+                        remainder=sum//11
+                    remainder=sum-remainder*11
+                    print("Control number: ", remainder)
+                    if remainder==int(id_list[10]):
+                        print("Tour ID number is correct!!!!")
+                    else:
+                        print("Your ID number is wrong!")
+            </pre>
         </section>
     </main>
     <footer>
