feat: finish html file

--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
         </section>
         <section class="section-code" id="code-example">
             <h2>Code example: </h2>
-            <pre>
+            <p class="code-description">
+                Every person in Estonia has their own personal code, 
+                which consists of the date of birth, gender and three identification numbers. 
+                This code checks if the person has entered the correct personal code
+            </p>
+            <pre class="code"><code>
                 id=""
                 while len(id)!=11 or ik.isdigit()!=True:
                     try:
@@ -128,7 +133,21 @@
                         print("Tour ID number is correct!!!!")
                     else:
                         print("Your ID number is wrong!")
-            </pre>
+            </code></pre>
+        </section>
+
+        <section class="section-education" id="education">
+            <h2>Education: </h2>
+            <p><span class="education-year">2019 - </span> Gamma Inteligence, Python Courses </p>
+            <p><span class="education-year">2021 - ... - </span>Technical school - junior software developer</p>
+        </section>
+
+        <section class="section-languages" id="languages">
+            <h2>Languages: </h2>
+            <p><span class="lang">Russian - </span>native</p>
+            <p><span class="lang">Estonian - </span>advanced</p>
+            <p><span class="lang">English - </span>intermediate</p>
+            <p><span class="lang">Spanish - </span>starter</p>
         </section>
     </main>
     <footer>
