feat: add footer

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             </ul>
           </nav>
     </header>
-    <section class="section-title">
-        <div>
-        <h1>Jelizaveta Aia</h1>
-        <h2>Front-end Developer(beginner)</h2>
-        </div>
-        <img src="assets/photo.jpg" alt="My photo">
-        </section>
     <main class="main-container">
-
+        <section class="section-title">
+            <div>
+            <h1>Jelizaveta Aia</h1>
+            <h2>Front-end Developer(beginner)</h2>
+            </div>
+            <img src="assets/photo.jpg" alt="My photo">
+            </section>
+        <div class="container">
         <section class="section-contacts" id="contacts">
             <h2>Contacts: </h2>
             <p><span>Phone: </span>+372 56 215 857</p>
@@ -40,7 +40,7 @@
             <p><span>GitHub: </span>@veta05</p>
             <p><span>Discord: </span>Evetta#3496</p>
         </section>
-
+        </div>
         <section class="section-myself" id="myself">
             <h2>About myself: </h2>
             <p>
@@ -151,7 +151,21 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-git">
+            <a href="https://github.com/Veta05" target="_blank">My GitHub</a>
+        </div>
+        <div class="footer-year">2022</div>
+        <div class="footer-rs">
+            <a href="https://rs.school/" target="_blank"><img src="https://rs.school/images/rs_school.svg" class="rs-img"></a>
+        </div>
+        <div class="footer-validator">
+            <a href="https://validator.w3.org/check?uri=referer">
+                <img width="88" height="31" alt="W3C HTML5 certified" src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png">
+            </a>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
