--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             </ul>
           </nav>
     </header>
+    <section class="section-title">
+        <div class="section-name">
+        <h1>Jelizaveta Aia</h1>
+        <h2>Front-end Developer(beginner)</h2>
+        </div>
+        <img src="assets/photo.jpg" alt="My photo" class="myphoto">
+    </section>
     <main class="main-container">
-        <section class="section-title">
-            <div>
-            <h1>Jelizaveta Aia</h1>
-            <h2>Front-end Developer(beginner)</h2>
-            </div>
-            <img src="assets/photo.jpg" alt="My photo">
-            </section>
         <div class="container">
         <section class="section-contacts" id="contacts">
             <h2>Contacts: </h2>
@@ -41,6 +41,7 @@
             <p><span>Discord: </span>Evetta#3496</p>
         </section>
         </div>
+        <div class="container">
         <section class="section-myself" id="myself">
             <h2>About myself: </h2>
             <p>
@@ -50,7 +51,8 @@
                 I love to learn, I love teamwork and I'm stress tolerant.
             </p>
         </section>
-
+        </div>
+        <div class="container">
         <section class="section-skills" id="skills">
             <h2>Skills: </h2>
             <ul>
@@ -64,6 +66,9 @@
                 <li>Access</li> 
             </ul>
         </section>
+        </div>
+
+        <div class="container">
         <section class="section-code" id="code-example">
             <h2>Code example: </h2>
             <p class="code-description">
@@ -135,13 +140,17 @@
                         print("Your ID number is wrong!")
             </code></pre>
         </section>
+        </div>
 
+        <div class="container">
         <section class="section-education" id="education">
             <h2>Education: </h2>
             <p><span class="education-year">2019 - </span> Gamma Inteligence, Python Courses </p>
             <p><span class="education-year">2021 - ... - </span>Technical school - junior software developer</p>
         </section>
+        </div>
 
+        <div class="container">
         <section class="section-languages" id="languages">
             <h2>Languages: </h2>
             <p><span class="lang">Russian - </span>native</p>
@@ -149,6 +158,7 @@
             <p><span class="lang">English - </span>intermediate</p>
             <p><span class="lang">Spanish - </span>starter</p>
         </section>
+        </div>
     </main>
     <footer>
         <div class="footer-git">
@@ -156,14 +166,8 @@
         </div>
         <div class="footer-year">2022</div>
         <div class="footer-rs">
-            <a href="https://rs.school/" target="_blank"><img src="https://rs.school/images/rs_school.svg" class="rs-img"></a>
-        </div>
-        <div class="footer-validator">
-            <a href="https://validator.w3.org/check?uri=referer">
-                <img width="88" height="31" alt="W3C HTML5 certified" src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png">
-            </a>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer">
-            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+            <a href="https://rs.school/" target="_blank">
+                <img src="https://rs.school/images/rs_school.svg" class="rs-img">
             </a>
         </div>
     </footer>
