--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="container">
         <section class="section-contacts" id="contacts">
             <h2>Contacts: </h2>
-            <p><span>Phone: </span>+372 56 215 857</p>
-            <p><span>E-mail: </span>jelizaveta05@gmail.com</p>
-            <p><span>GitHub: </span>@veta05</p>
-            <p><span>Discord: </span>Evetta#3496</p>
+            <p class="contacts-p"><img src="https://cdn-icons-png.flaticon.com/512/5103/5103372.png" alt="phone icon" class="icons"><span>Phone: </span>+372 56 215 857</p>
+            <p class="contacts-p"><img src="https://cdn-icons-png.flaticon.com/512/115/115757.png" alt="e-mail icon" class="icons"><span>E-mail: </span>jelizaveta05@gmail.com</p>
+            <p class="contacts-p"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="git icon" class="icons"><span>GitHub: </span>@veta05</p>
+            <p class="contacts-p"><img src="https://static-00.iconduck.com/assets.00/discord-icon-512x444-gicjsabr.png" alt="discord icon" class="icons"><span>Discord: </span>Evetta#3496</p>
         </section>
         </div>
         <div class="container">
@@ -57,13 +57,52 @@
             <h2>Skills: </h2>
             <ul>
                 <li>HTML</li>
+                <img src="https://cdn-icons-png.flaticon.com/512/919/919827.png" alt="html icon" class="skills-icon">
+                <div class="skills-container">
+                    <div class="skills html">70%</div>
+                </div class="skills-container">
+
                 <li>CSS</li>
+                <img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="сыы icon" class="skills-icon">
+                <div class="skills-container">
+                    <div class="skills css">40%</div>
+                </div>
+
                 <li>JavaScript</li>
+                <img src="https://www.clipartmax.com/png/middle/470-4707396_javascript-icon-html-css-js-icons.png" alt="js icon" class="skills-icon">
+                <div class="skills-container">
+                    <div class="skills js">30%</div>
+                </div>
+
                 <li>Python</li>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Python.svg/768px-Python.svg.png" alt="python icon" class="skills-icon">
+                <div class="skills-container">
+                    <div class="skills python">20%</div>
+                </div>
+
                 <li>PHP</li>
+                <img src="https://e7.pngegg.com/pngimages/759/987/png-clipart-php-computer-icons-web-development-logo-icon-text-trademark.png" alt="php icon" class="skills-icon">
+                <div class="skills-container">
+                    <div class="skills php">30%</div>
+                </div>
+
                 <li>C#</li>
+                <img src="https://www.freeiconspng.com/uploads/c-logo-icon-18.png" alt="c# icon" class="skills-icon">
+                <div class="skills-container">
+                    <div class="skills c">10%</div>
+                </div>
+
                 <li>MySql</li>
-                <li>Access</li> 
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Database-mysql.svg/424px-Database-mysql.svg.png?20220815123837" alt="sql icon" class="skills-icon">
+                <div class="skills-container">
+                    <div class="skills sql">60%</div>
+                </div>
+
+                <li>Access</li>
+                <img src="https://cdn.icon-icons.com/icons2/2397/PNG/512/microsoft_office_access_logo_icon_145727.png" alt="access icon" class="skills-icon">
+                <div class="skills-container">
+                    <div class="skills access">50%</div>
+                </div> 
             </ul>
         </section>
         </div>
@@ -71,73 +110,17 @@
         <div class="container">
         <section class="section-code" id="code-example">
             <h2>Code example: </h2>
-            <p class="code-description">
-                Every person in Estonia has their own personal code, 
-                which consists of the date of birth, gender and three identification numbers. 
-                This code checks if the person has entered the correct personal code
-            </p>
             <pre class="code"><code>
-                id=""
-                while len(id)!=11 or ik.isdigit()!=True:
-                    try:
-                        id=input("Enter your id: ")
-                    except ValueError:
-                        print("Error!")
-                print("id analys: ".center(50,"-"))
-                print("First symbol: ")
-                id_list=list(id)
-                    if int(id_list[0]) not in [1,2,3,4,5,6]:
-                        print(ik_list[0], " - wrong number")
-                    else:
-                        print(id_list[0], " - correct number!")
-                        month=id_list[3]+id_list[4]
-                        month=int(month)
-                        if month>0 and month<13:
-                            print(id_list[3], id_list[4], "Correct data!")
-                            day=int(id_list[5]+id_list[6])
-                            #1,3,5,7,8,10,12 - 31 days
-                            #2,4,6,9,11 - 28-29, 30 days
-                            #1,2-"18", 3,4-"19", 5,6-"20" + id_list[1]+id_list[2]
-                            if int(id_list[0])==1 or int(id_list[0])==2:
-                                year=int("18" + id_list[1]+id_list[2])
-                            elif int(id_list[0])==3 or int(id_list[0])==4:
-                                year=int("19" + id_list[1]+id_list[2])
-                            elif int(id_list[0])==5 or int(id_list[0])==6:
-                                year=int("19" + id_list[1]+id_list[2])
-                            if month in[1,3,5,7,8,10,10] and day>0 and day<32:
-                                print(id_list[5], id_list[6], "correct day!")
-                            elif (month in [2,4,6,9,11] and day>0 and day<31) or (month==2 and day>0 and day<29):
-                                print(id_list[5], id_list[6], "correct day!")
-                            elif tear% 4==0 and month ==2 and day >0 and day<30:
-                                print(id_list[5], id_list[6], "correct day! 29 february.")
-                            else:
-                                print(id_list[3], id_list[4], "Wrong days")
-                        else:
-                            print(id_list[3],id_list[4], "wrong datas")
-                    sum=0
-                    for i in range(1,11):
-                        if i<10:
-                            sum+=i*int(id_list[i-1])
-                        else:
-                            sum+=(i-9)*int(id_list[i-1])
-                            sum+=i*int(id_list[i-1])
-                    print("Summ: ", sum)
-                    remainder=sum//11
-                    print(remainder)
-                    if remainder==10:
-                        sum=0
-                        for i in range(3,13):
-                            if i<=9:
-                                sum+=i*int(id_list[i-1])
-                            else:
-                                sum+=(i-9)*int(id_list[i-1])
-                        remainder=sum//11
-                    remainder=sum-remainder*11
-                    print("Control number: ", remainder)
-                    if remainder==int(id_list[10]):
-                        print("Tour ID number is correct!!!!")
-                    else:
-                        print("Your ID number is wrong!")
+                side_a, side_b, side_c = input("PLease enter 3 sides of triangle: ") .split(" ")
+
+                print(side_a)
+                print(side_b)
+                print(side_c)
+
+                half_perimeter = (float(side_a) + float(side_b) + float(side_c)) / 2
+
+                triangle_square = (half_perimeter * (half_perimeter - float(side_a)) * (half_perimeter - float(side_b)) * (half_perimeter - float(side_c))) ** 0.5
+                print(triangle_square)
             </code></pre>
         </section>
         </div>
@@ -167,7 +150,7 @@
         <div class="footer-year">2022</div>
         <div class="footer-rs">
             <a href="https://rs.school/" target="_blank">
-                <img src="https://rs.school/images/rs_school.svg" class="rs-img">
+                <img src="https://rs.school/images/rs_school.svg" class="rs-img" alt="rsschool logo">
             </a>
         </div>
     </footer>
