feat:styling finish

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
 
                 <li>Access</li>
-                <img src="https://cdn.icon-icons.com/icons2/2397/PNG/512/microsoft_office_access_logo_icon_145727.png" alt="access icon" class="skills-icon">
+                <img src="https://cdn.icon-icons.com/icons2/2397/PNG/512/microsoft_office_access_logo_icon_145727.png" alt="html icon" class="skills-icon">
                 <div class="skills-container">
                     <div class="skills access">50%</div>
                 </div> 
@@ -125,6 +125,7 @@
         </section>
         </div>
 
+        <div class="section-column">
         <div class="container">
         <section class="section-education" id="education">
             <h2>Education: </h2>
@@ -142,17 +143,22 @@
             <p><span class="lang">Spanish - </span>starter</p>
         </section>
         </div>
+    </div>
     </main>
     <footer>
-        <div class="footer-git">
-            <a href="https://github.com/Veta05" target="_blank">My GitHub</a>
-        </div>
-        <div class="footer-year">2022</div>
-        <div class="footer-rs">
-            <a href="https://rs.school/" target="_blank">
+        <nav>
+        <ul class="footer-list">
+            <li><a href="https://github.com/Veta05" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/38/38401.png" class="icons" alt="github icon"></a></li>
+            
+            <li>&copy J.A</li>
+            <li>2022</li>
+
+            <li><a href="https://rs.school/" target="_blank">
                 <img src="https://rs.school/images/rs_school.svg" class="rs-img" alt="rsschool logo">
-            </a>
-        </div>
+            </a></li>
+            
+        </ul>
+        </nav>
     </footer>
 </body>
 </html>
