--- a/index.html
+++ b/index.html
@@ -56,53 +56,45 @@
         <section class="section-skills" id="skills">
             <h2>Skills: </h2>
             <ul>
-                <li>HTML</li>
-                <img src="https://cdn-icons-png.flaticon.com/512/919/919827.png" alt="html icon" class="skills-icon">
+                <li>HTML
                 <div class="skills-container">
                     <div class="skills html">70%</div>
-                </div class="skills-container">
+                </div></li>
 
-                <li>CSS</li>
-                <img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="сыы icon" class="skills-icon">
+                <li>CSS
                 <div class="skills-container">
                     <div class="skills css">40%</div>
-                </div>
+                </div></li>
 
-                <li>JavaScript</li>
-                <img src="https://www.clipartmax.com/png/middle/470-4707396_javascript-icon-html-css-js-icons.png" alt="js icon" class="skills-icon">
+                <li>JavaScript
                 <div class="skills-container">
                     <div class="skills js">30%</div>
-                </div>
+                </div></li>
 
-                <li>Python</li>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Python.svg/768px-Python.svg.png" alt="python icon" class="skills-icon">
+                <li>Python
                 <div class="skills-container">
                     <div class="skills python">20%</div>
-                </div>
+                </div></li>
 
-                <li>PHP</li>
-                <img src="https://e7.pngegg.com/pngimages/759/987/png-clipart-php-computer-icons-web-development-logo-icon-text-trademark.png" alt="php icon" class="skills-icon">
+                <li>PHP
                 <div class="skills-container">
                     <div class="skills php">30%</div>
-                </div>
+                </div></li>
 
-                <li>C#</li>
-                <img src="https://www.freeiconspng.com/uploads/c-logo-icon-18.png" alt="c# icon" class="skills-icon">
+                <li>C#
                 <div class="skills-container">
                     <div class="skills c">10%</div>
-                </div>
+                </div></li>
 
-                <li>MySql</li>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Database-mysql.svg/424px-Database-mysql.svg.png?20220815123837" alt="sql icon" class="skills-icon">
+                <li>MySql
                 <div class="skills-container">
                     <div class="skills sql">60%</div>
-                </div>
+                </div></li>
 
-                <li>Access</li>
-                <img src="https://cdn.icon-icons.com/icons2/2397/PNG/512/microsoft_office_access_logo_icon_145727.png" alt="html icon" class="skills-icon">
+                <li>Access
                 <div class="skills-container">
                     <div class="skills access">50%</div>
-                </div> 
+                </div></li>
             </ul>
         </section>
         </div>
@@ -150,13 +142,13 @@
         <ul class="footer-list">
             <li><a href="https://github.com/Veta05" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/38/38401.png" class="icons" alt="github icon"></a></li>
             
-            <li>&copy J.A</li>
+            <li>&copy; J.A</li>
             <li>2022</li>
 
             <li><a href="https://rs.school/" target="_blank">
                 <img src="https://rs.school/images/rs_school.svg" class="rs-img" alt="rsschool logo">
             </a></li>
-            
+
         </ul>
         </nav>
     </footer>
